--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "NODE_ENV=test jest",
+    "dev": "NODE_ENV=development nodemon --exec ts-node src/app"
   },
   "private": true,
   "dependencies": {
@@ -16,6 +17,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.2",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
