--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "testdrivenflow",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "exports": "./src/app.ts",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "test": "NODE_ENV=test jest",
-    "dev": "NODE_ENV=development nodemon --exec ts-node src/app"
+    "test:watch": "jest --watch",
+    "dev": "NODE_ENV=development ts-node src/app",
+    "lint": "eslint . --ext .ts"
   },
-  "private": true,
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
@@ -16,6 +20,12 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.5.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.2",
     "prettier": "^3.2.5",
