--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
