--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "files": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "jest.config.js"]
 }
