--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,15 @@
     "outDir": "dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
     "strict": true,
     "skipLibCheck": true,
     "noImplicitAny": true,
-    "resolveJsonModule": true
+    "alwaysStrict": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "experimentalDecorators": true
   },
   "ts-node": {
     "files": true
