Fix to initializing SKIP_ENV_TEST variable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,6 @@ jobs:
 
       - name: Run tests
         run:
-          export SKIP_ENV_CHECK=true |
           npm test
+        env:
+          SKIP_ENV_TEST: true
