--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,26 +13,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
             node-version: '20'
-
-      - name: Install dependencies
-        run:
-          npm install
-
-      - name: Lint code
-        run:
-          npm run lint
-
       - name: Run tests
         run:
+          npm ci
+          npm run lint
           npm test
         env:
           SKIP_ENV_TEST: true
