--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "NODE_ENV=development nodemon --watch 'src' --ext ts --exec ts-node src/app"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
