Fix add pipe to run lint and test command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - test
-      - develop
+      - feature/auth
   pull_request:
     branches:
       - main
@@ -21,7 +21,7 @@ jobs:
         with:
             node-version: '20'
       - name: Run tests
-        run:
+        run: |
           npm ci
           npm run lint
           npm test
