--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "NODE_ENV=test jest",
     "test:watch": "jest --watch",
     "predev": "npm run lint && npm run test",
-    "dev": "NODE_ENV=development nodemon --watch 'src' --ext ts --exec ts-node src/app"
+    "dev": "NODE_ENV=development nodemon --watch 'src' --ext ts --exec ts-node src/app",
+    "docker:dev": "docker-compose -f docker-compose.dev.yaml up -d",
+    "docker:dev:down": "docker-compose -f docker-compose.dev.yaml down --rmi all"
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
