--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,9 @@ name: CI
 
 on:
   push:
-    branches:
-      - test
-      - feature/auth
+    branches: [main, develop]
   pull_request:
-    branches:
-      - main
-      - develop
+    branches: [main, develop]
 
 jobs:
   build:
@@ -20,6 +16,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
             node-version: '20'
+
       - name: Run tests
         run: |
           npm ci
