--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Test
 
 on:
   push:
@@ -7,20 +7,40 @@ on:
     branches: [main, develop]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+
+    # Service containers to run with `container-job`
+    services:
+      # Label used to access the service container
+      mysql:
+        # Docker Hub image
+        image: mysql:8.4.0
+        env:
+            MYSQL_ROOT_PASSWORD: ${{secrets.MYSQL_ROOT_PASSWORD}}
+            MYSQL_DATABASE: ${{secrets.MYSQL_DATABASE}}
+            MYSQL_USER: ${{secrets.MYSQL_USER}}
+            MYSQL_PASSWORD: ${{secrets.MYSQL_PASSWORD}}
+
     steps:
-      - name: Checkout repository
+      - name: Checkout repository code
         uses: actions/checkout@v2
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
             node-version: '20'
-
+      - name: Install dependencies
+        run: npm ci
       - name: Run tests
         run: |
-          npm ci
           npm run lint
           npm test
         env:
           SKIP_ENV_TEST: true
+          PORT: ${{secrets.PORT}}
+          MYSQL_HOST: ${{secrets.MYSQL_HOST}}
+          MYSQL_PORT: ${{secrets.MYSQL_PORT}}
+          MYSQL_DATABASE: ${{secrets.MYSQL_DATABASE}}
+          MYSQL_USER: ${{secrets.MYSQL_USER}}
+          MYSQL_PASSWORD: ${{secrets.MYSQL_PASSWORD}}
+
