--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, test]
   pull_request:
-    branches: [main, develop]
+    branches: [main, test]
 
 jobs:
   test:
