--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,11 @@ jobs:
             MYSQL_DATABASE: ${{secrets.MYSQL_DATABASE}}
             MYSQL_USER: ${{secrets.MYSQL_USER}}
             MYSQL_PASSWORD: ${{secrets.MYSQL_PASSWORD}}
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - name: Checkout repository code
