Fix ports for mysql service

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
       mysql:
         # Docker Hub image
         image: mysql:8.4.0
+        ports:
+          - 3306:3306
         env:
             MYSQL_ROOT_PASSWORD: ${{secrets.MYSQL_ROOT_PASSWORD}}
             MYSQL_DATABASE: ${{secrets.MYSQL_DATABASE}}
