--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -15,14 +15,13 @@ services:
       - mysql
     networks:
       - backend
+
   mysql:
     container_name: mysql
+    image: mysql:8.4.0
     restart: on-failure
     ports:
       - "3306:3306"
-    build:
-        context: ./deploy/mysql
-        dockerfile: Dockerfile
     env_file:
       - .env.dev
     healthcheck:
@@ -31,8 +30,10 @@ services:
       retries: 10
     volumes:
       - db-data:/var/lib/mysql
+      - ./deploy/mysql:/docker-entrypoint-initdb.d/
     networks:
       - backend
+
   swagger:
     container_name: swagger
     restart: on-failure
