--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "lint": "eslint . --ext .ts",
     "test": "NODE_ENV=test jest",
     "test:watch": "jest --watch",
+    "test:up": "docker compose -f docker-compose.test.yaml up -d",
+    "test:down": "docker compose -f docker-compose.test.yaml down --rmi all",
+    "mysql:up": "docker compose -f docker-compose.test.yaml up -d mysql",
+    "mysql:down": "docker compose -f docker-compose.test.yaml down --rmi all mysql",
+    "swagger:up": "docker compose -f docker-compose.test.yaml up -d swagger",
+    "swagger:down": "docker compose -f docker-compose.test.yaml down --rmi all swagger",
     "predev": "npm run lint && npm run test",
     "dev": "NODE_ENV=development nodemon --watch src --ext ts --exec ts-node src/server",
-    "dev:up": "docker compose -f docker-compose.dev.yaml up -d",
-    "dev:down": "docker compose -f docker-compose.dev.yaml down --rmi all",
-    "mysql:up": "docker compose -f docker-compose.dev.yaml up -d mysql",
-    "mysql:down": "docker compose -f docker-compose.dev.yaml down --rmi all mysql",
-    "swagger:up": "docker compose -f docker-compose.dev.yaml up -d swagger",
-    "swagger:down": "docker compose -f docker-compose.dev.yaml down --rmi all swagger",
     "ci/cd": "act --container-architecture linux/amd64 --secret-file .secrets"
   },
   "dependencies": {
