Feat: separate unit test and integration test
API and middleware tests set to integration. The others are now on unit test.

--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "node": ">=18"
   },
   "scripts": {
+    "test": "jest",
+    "test:unit": "jest --config test/unit",
+    "test:integration": "jest --config test/integration",
+    "test:node:up": "docker compose -f docker-compose.test.yaml up -d",
+    "test:node:down": "docker compose -f docker-compose.test.yaml down --rmi all",
+    "test:mysql:up": "docker compose -f docker-compose.test.yaml up -d mysql",
+    "test:mysql:down": "docker compose -f docker-compose.test.yaml down --rmi all mysql",
+    "test:swagger:up": "docker compose -f docker-compose.test.yaml up -d swagger",
+    "test:swagger:down": "docker compose -f docker-compose.test.yaml down --rmi all swagger",
     "lint": "eslint . --ext .ts",
-    "test": "NODE_ENV=test jest",
-    "test:watch": "jest --watch",
-    "test:up": "docker compose -f docker-compose.test.yaml up -d",
-    "test:down": "docker compose -f docker-compose.test.yaml down --rmi all",
-    "mysql:up": "docker compose -f docker-compose.test.yaml up -d mysql",
-    "mysql:down": "docker compose -f docker-compose.test.yaml down --rmi all mysql",
-    "swagger:up": "docker compose -f docker-compose.test.yaml up -d swagger",
-    "swagger:down": "docker compose -f docker-compose.test.yaml down --rmi all swagger",
     "predev": "npm run lint && npm run test",
     "dev": "NODE_ENV=development nodemon --watch src --ext ts --exec ts-node src/server",
     "ci/cd": "act --container-architecture linux/amd64 --secret-file .secrets"
